chore: update deprecated methods + remove unused imports